<resources>
    <string name="app_name">Ware</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_you_agree_to_our_terms_and_privacy_policy">Do you agree to our Terms and Privacy Policy?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="intro">Ware—Your personal database for keeping your watch and read lists. \n\nWare came from the words watchlist and readlist. “Wa” from watch and “re” from read. This is a revamped notes app dedicated to people who are fond of watching movies/series/dramas and reading books, also called bookworms. This is an application that makes it easier for users to keep track of the things they want to watch and read.</string>
    <string name="username">Username\n</string>
    <string name="greetings">Hello there,</string>
    <string name="name">John Thomas</string>
    <string name="textToSignUp">Don\'t have an account? Sign Up</string>
    <string name="watchlist_title">Watchlist</string>
    <string name="terms_and_privacy">Terms and Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="tou">1. Acceptance: By using Ware, you agree \nto there Terms of use. \n2. User Content: You are responsible for \nthe content you add to Ware. You grant \nWare a non-exclusive, worldwide, \nroyalty-free, license to use, reproduce \nmodify, adapt, publish, distribute, and \n display your content. \n3. Prohibited Conduct: you may not use \nWare to: \n -Upload harmful, illegal, or offensive\n content.\n -Promote or facilitate illegal activities.\n -Violate the rights of others. \n4. Termination: Ware may terminate \nyour account or access to the app at\nany time, for any reason.</string>
    <string name="policycontents">1. Information collection: Ware collects \ninformation you provide when you \nwhen you create an acount or use the \napp. This may include your name, \nemail address, and the content you add. \n2. Information Use: We use your \ninformation to: \n -Provide the Ware service. \n -Improve the app and its features. \n -Communicate with you about Ware. \n3. Data Security: We take reasonable \nmeasures to protect your information, \nbut we cannot guarantee absolute \nsecurity. \n4. Third-Party Services: Ware may use \nthird-party services that collect and \nprocess your data. Please refer to their \nprivacy policies for more information. \n5. Changes: We may update these \nTerms of Use and Privacy Policy. Your\nacceptance of the updated policies. \n6. Contact: If you have questions or \nconcerns, please contact us at \nware@realmail.com.\n\nBy using Ware, you agree to these\nTerms of Use and Privacy Policy.</string>
    <string name="About">About</string>
    <string name="AboutContent">Ware—Your personal database for \nkeeping you watch and read list. \n\nWare came from the words watchlist \nand readlist. “Wa” from watch and “re” \nfrom read. This is a revamped notes app \ndedicated to people who are fond of \nwatching movies/series/dramas and \nreading books, also called bookworms. \nThis is an application that makes it easier \nfor users to keep track of the things \nthey want to watch and read.</string>
    <string name="copyright_2024_ware">Copyright 2024 Ware</string>
</resources>