<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@drawable/main_background"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="291dp"
        android:layout_height="615dp"
        android:layout_marginTop="-30dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/center_logo_higher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="140dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_name_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/poppins"
                android:layout_marginEnd="5dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#f9f9f9"
                android:textColorHint="#f9f9f9"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/last_name_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/poppins"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#f9f9f9"
                android:textColorHint="#f9f9f9"
                android:textSize="14sp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/poppins"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#f9f9f9"
            android:textColorHint="#f9f9f9"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/poppins"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#f9f9f9"
            android:textColorHint="#f9f9f9"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/poppins"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#f9f9f9"
            android:textColorHint="#f9f9f9"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/poppins"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#f9f9f9"
            android:textColorHint="#f9f9f9"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/poppins"
            android:hint="Phone Number"
            android:inputType="phone"
            android:padding="12dp"
            android:textColor="#f9f9f9"
            android:textColorHint="#f9f9f9"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0d9f58"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textSize="15sp"
            android:textColor="#f9f9f9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.624"
            android:layout_marginTop="12sp"
            tools:ignore="VisualLintButtonSize" />

        <TextView android:id="@+id/checkbox_tac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#f9f9f9"
            android:fontFamily="@font/poppins"
            android:textSize="13sp"
            android:buttonTint="#f9f9f9"
            />

        <TextView
            android:id="@+id/linkToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="#f9f9f9"
            android:fontFamily="@font/poppins"
            android:buttonTint="#f9f9f9"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            />


    </LinearLayout>

</FrameLayout>