<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/background_image"
                    android:layout_width="match_parent"
                    android:layout_height="735dp"
                    android:background="@drawable/banner_jpg"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/TermsAndPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="end"
                    android:text="@string/terms_and_privacy"
                    android:textColor="#0f0f0f"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.118"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="283dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/curved_white_background"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TermsAndPrivacy">

                    <ImageView
                        android:id="@+id/horizontal_logo"
                        android:layout_width="250dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/horizontal_logo_ware" />

                    <TextView
                        android:id="@+id/TermsOfUse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/terms_of_use"
                        android:textColor="#0f0f0f"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tou_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:lines="30"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/tou"
                        android:textColor="#0f0f0f"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@+id/PolicyContent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TermsOfUse"
                        app:layout_constraintVertical_bias="0.26" />

                    <TextView
                        android:id="@+id/PrivacyPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="20dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/privacy_policy"
                        android:textColor="#0f0f0f"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.185"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tou_content" />

                    <TextView
                        android:id="@+id/PolicyContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins"
                        android:lines="30"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/policycontents"
                        android:textColor="#0f0f0f"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/PrivacyPolicy"
                        tools:layout_editor_absoluteX="56dp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</FrameLayout>