<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/main_background">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="291dp"
        android:layout_height="615dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/center_logo_higher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="250dp"
        android:padding="16dp">


        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/poppins"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#f9f9f9"
            android:textColorHint="#f9f9f9"
            android:textSize="14sp"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColor="#f9f9f9"
        android:textColorHint="#f9f9f9"
        android:textSize="12sp"/>

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0d9f58"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textSize="15sp"
            android:textColor="#f9f9f9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.624"
            android:layout_marginTop="12sp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/ForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textSize="13sp"
            android:fontFamily="@font/poppins"
            android:textColor="#f9f9f9"
            android:buttonTint="#f9f9f9"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/linkToSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't have an account? Sign Up"
            android:textSize="13sp"
            android:fontFamily="@font/poppins"
            android:textColor="#f9f9f9"
            android:buttonTint="#f9f9f9"
            android:layout_marginTop="150dp"
            android:textAlignment="center"
            />

    </LinearLayout>

</FrameLayout>