<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/background_image"
                    android:layout_width="match_parent"
                    android:layout_height="735dp"
                    android:background="@drawable/banner_jpg"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/About"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="end"
                    android:text="@string/About"
                    android:textColor="#0f0f0f"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.118"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="283dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/curved_white_background"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/About"
                    app:layout_constraintVertical_bias="0.001">

                    <ImageView
                        android:id="@+id/horizontal_logo"
                        android:layout_width="250dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/horizontal_logo_ware" />

                    <TextView
                        android:id="@+id/AboutContent"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:padding="20dp"
                        android:text="@string/intro"
                        android:textColor="#0f0f0f"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@+id/About" />

                    <TextView
                        android:id="@+id/Team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/the_team"
                        android:textColor="#0f0f0f"
                        android:textSize="18sp"
                        />

                    <ImageView
                        android:id="@+id/Positions"
                        android:layout_width="350dp"
                        android:layout_height="700dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@drawable/positions"
                        android:paddingLeft="10dp"
                         />

                    <TextView
                        android:id="@+id/Copyright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins"
                        android:text="@string/copyright_2024_ware"
                        android:textColor="#0f0f0f"
                        android:textSize="14sp"
                        android:paddingBottom="10dp"
                        />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>




    </RelativeLayout>

</FrameLayout>